# db/migrate/20200923113733_rename_schema_id_dri.rb
@@ -1,0 +1,5 @@
+class RenameSchemaIdDri < ActiveRecord::Migration[5.2]
+  def change
+    rename_column :items, :schema_id, :schema_dri
+  end
+end
