# swagger/v1/swagger.json
@@ -231,6 +231,31 @@
         }
       }
     },
+    "/api/data": {
+      "post": {
+        "summary": "create new record",
+        "tags": [
+          "Read/Write Data"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "input",
+            "in": "body"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success"
+          },
+          "403": {
+            "description": "Permission denied"
+          }
+        }
+      }
+    },
     "/api/items/{item_id}/details": {
       "get": {
         "summary": "read specific record",
@@ -243,6 +268,87 @@
         "parameters": [
           {
             "name": "item_id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success"
+          },
+          "403": {
+            "description": "Permission denied"
+          }
+        }
+      }
+    },
+    "/api/data?id={item_id}": {
+      "get": {
+        "summary": "read specific record by querying record ID",
+        "tags": [
+          "Read/Write Data"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "item_id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success"
+          },
+          "403": {
+            "description": "Permission denied"
+          }
+        }
+      }
+    },
+    "/api/data?dri={dri}": {
+      "get": {
+        "summary": "read specific record by querying DRI",
+        "tags": [
+          "Read/Write Data"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "dri",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success"
+          },
+          "403": {
+            "description": "Permission denied"
+          }
+        }
+      }
+    },
+    "/api/data?schema={schema_dri}": {
+      "get": {
+        "summary": "read all records with a given schema DRI",
+        "tags": [
+          "Read/Write Data"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "schema_dri",
             "in": "path",
             "type": "string",
             "required": true
